--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,40 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap');
 
-.font-cinzel { font-family: 'Cinzel', serif; }
-@keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
-.fading-name { display: inline-block; animation: fadeIn 3s ease-in-out infinite alternate; padding: 2px; opacity: 0; }
+.font-cinzel {
+    font-family: 'Cinzel', serif;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(10px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.fading-name {
+    display: block;
+    animation: fadeIn 3s ease-in-out infinite alternate;
+    padding: 2px;
+    opacity: 0;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #0000005e;
+}
+
+canvas {
+    display: block;
+    margin: 0 auto;
+}
